# PlanMaster

./: .gitignore  README.md
PlanMaster/: .gitignore  CMakeLists.txt  LoginPage.qml  databasemanager.cpp  databasemanager.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui  resources.qrc  task.cpp  task.h  taskmanager.cpp  taskmanager.h
